# simplon-rag-sample

./: .env.example  .gitignore  .pre-commit-config.yaml  BRIEF.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: frontend.yml
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/data/db/init/: init.sql
api/src/rag/config/: settings.py
api/src/rag/db/models/: document.py
api/src/rag/evaluation/: ragas_pipeline.py
api/src/rag/rag/agent/: graph.py  nodes.py  prompts.py
api/src/rag/rag/embeddings/: ollama_embeddings.py
api/src/rag/rag/ingestion/: pipeline.py
api/src/rag/rag/retriever/: pgvector_retriever.py
api/tests/: conftest.py
api/tests/integration/: test_chat_service.py
api/tests/unit/: test_web_loader.py
data/evaluation/: samples.json
frontend/: .dockerignore  Dockerfile  README.md
frontend/.streamlit/: config.toml
frontend/src/: app.css  app.html
frontend/src/app/: api_client.py  app.py  config.py
frontend/src/lib/components/: MessageBubble.svelte  MessageBubble.test.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/tests/: test_api_client.py
