[project]
name = "simplon-rag-sample"
version = "0.1.0"
description = "Sample RAG support chatbot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Evaluation
    "ragas>=0.4.3",
    # LLM & agent framework
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-postgres>=0.0.12",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # PDF parsing
    "pypdf>=4.0",
    # Web loading
    "langchain-community>=0.4.1",
    "beautifulsoup4>=4.14.3",
    # Config
    "pydantic-settings>=2.0",
    "pyjwt>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "aiosqlite>=0.22.1",
    "ruff>=0.4",
    # Linting
    "pymarkdownlnt>=0.9",
    "yamllint>=1.35",
    # Git hooks
    "pre-commit>=3.0",
    # Release
    "python-semantic-release>=10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): v{version}"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "chore", "test", "ci", "build", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
